[tool.poetry]
name = "rookc"
version = "0.1.0"
description = "Rook Compiler"
authors = ["bellflwr <70229194+bellflwr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
