[tool.poetry]
name = "rookc"
version = "0.1.0"
description = "Rook Compiler"
authors = ["bellflwr <70229194+bellflwr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
typer = {extras = ["all"], version = "^0.9.0"}
lark = "^1.1.8"
rich = "^13.7.0"
pyinstaller = "^6.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
